--- a/index.html
+++ b/index.html
@@ -7,33 +7,32 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="app">
-    <!-- Barra de Progresso -->
-    <div id="progress-container">
-      <div id="progress-bar"></div>
-    </div>
+  <!-- Barra de progresso -->
+  <div class="progress-bar">
+    <div id="progress"></div>
+  </div>
 
-    <!-- Telas -->
+  <main>
+    <!-- Tela 1 -->
     <section id="tela1" class="tela ativa">
-    <img src="assets/logo_horizontal.svg" alt="">
-      <h1>Seja bem-vindo!</h1>
-      <p> Clique em "Vamos começar" e monte sua festa em alguns minutos!</p>
+      <img src="assets/logo_horizontal.svg" alt="">
+      <h1>Seja bem-vindo</h1>
+      <p>Clique em “Vamos começar“ e monte sua festa em minutos.</p>
       <div class="buttons">
-    <button class="btn btn-primary" onclick="proximaTela(2)">Vamos começar</button>
-    <button class="btn btn-secondary">Veja como funciona</button>
-    </div>
-      
+        <button class="btn btn-primary" onclick="proximaTela(2)">Vamos começar</button>
+      </div>
     </section>
 
+    <!-- Tela 2 -->
     <section id="tela2" class="tela">
-      <h2>Qual seu nome?</h2>
-      <input type="text" id="nomeCliente" placeholder="Digite seu nome">
+      <h2>Digite seu nome</h2>
+      <input type="text" id="nomeCliente" placeholder="Seu nome" class="input-padrao">
 
-      <h2>Escolha o tipo de comemoração</h2>
-      <label><input type="radio" name="tipoFesta" value="aniversario"> Aniversário</label>
-      <label><input type="radio" name="tipoFesta" value="mesversario"> Mêsversário</label>
-      <label><input type="radio" name="tipoFesta" value="15anos"> 15 Anos</label>
-      <label><input type="radio" name="tipoFesta" value="bodas"> Bodas</label>
+      <h2>Escolha o tipo de festa</h2>
+      <label><input type="radio" name="tipoFesta" value="Aniversário"> Aniversário</label>
+      <label><input type="radio" name="tipoFesta" value="15 Anos"> 15 Anos</label>
+      <label><input type="radio" name="tipoFesta" value="Bodas"> Bodas</label>
+      <label><input type="radio" name="tipoFesta" value="Mêsversário"> Mêsversário</label>
 
       <div class="buttons">
         <button class="btn btn-primary" onclick="proximaTela(3)">Próximo</button>
@@ -41,39 +40,45 @@
       </div>
     </section>
 
+    <!-- Tela 3 -->
     <section id="tela3" class="tela">
       <h2>Escolha o tema</h2>
-      <div id="listaTemas"></div>
-    <div class="buttons">
+      <input type="text" id="pesquisaTema" class="input-padrao" placeholder="Pesquisar tema..." onfocus="mostrarTemas()" oninput="filtrarTemas()">
+      <div id="listaTemas" class="hidden"></div>
+
+      <div class="buttons">
         <button class="btn btn-primary" onclick="proximaTela(4)">Próximo</button>
         <button class="btn btn-secondary" onclick="voltarTela(2)">Voltar</button>
       </div>
     </section>
 
+    <!-- Tela 4 -->
     <section id="tela4" class="tela">
       <h2>Escolha o combo</h2>
-      <label><input type="radio" name="combo" value="essencial"> Essencial</label>
-      <label><input type="radio" name="combo" value="fantastico"> Fantástico</label>
-      <label><input type="radio" name="combo" value="inesquecivel"> Inesquecível</label>
+      <label><input type="radio" name="combo" value="Essencial"> Essencial</label>
+      <label><input type="radio" name="combo" value="Fantástico"> Fantástico</label>
+      <label><input type="radio" name="combo" value="Inesquecível"> Inesquecível</label>
       <label><input type="checkbox" id="semMesa"> Sem mesa</label>
 
-      <div id="valorTotal">Total: R$0,00</div>
-    <div class="buttons">
+      <div class="buttons">
         <button class="btn btn-primary" onclick="proximaTela(5)">Próximo</button>
         <button class="btn btn-secondary" onclick="voltarTela(3)">Voltar</button>
       </div>
     </section>
 
+    <!-- Tela 5 -->
     <section id="tela5" class="tela">
       <h2>Dados do Homenageado</h2>
-      <input type="text" id="nomeHomenageado" placeholder="Nome do homenageado">
-      <input type="number" id="idadeHomenageado" placeholder="Idade (se aplicável)">
-    <div class="buttons">
+      <input type="text" id="nomeHomenageado" class="input-padrao" placeholder="Nome do homenageado">
+      <input type="number" id="idadeHomenageado" class="input-padrao" placeholder="Idade (se aplicável)">
+
+      <div class="buttons">
         <button class="btn btn-primary" onclick="proximaTela(6)">Próximo</button>
         <button class="btn btn-secondary" onclick="voltarTela(4)">Voltar</button>
       </div>
     </section>
 
+    <!-- Tela 6 -->
     <section id="tela6" class="tela">
       <h2>Adicionais</h2>
       <label><input type="checkbox" value="Bolo"> Bolo</label>
@@ -81,32 +86,37 @@
       <label><input type="checkbox" value="Cupcakes"> Cupcakes</label>
       <label><input type="checkbox" value="Topper de Bolo"> Topper de Bolo</label>
 
-     <div class="buttons">
+      <div class="buttons">
         <button class="btn btn-primary" onclick="proximaTela(7)">Próximo</button>
         <button class="btn btn-secondary" onclick="voltarTela(5)">Voltar</button>
       </div>
     </section>
 
+    <!-- Tela 7 -->
     <section id="tela7" class="tela">
       <h2>Escolha a data</h2>
-      <input type="date" id="dataFesta">
-    <div class="buttons">
+      <input type="date" id="dataFesta" class="input-padrao">
+
+      <div class="buttons">
         <button class="btn btn-primary" onclick="proximaTela(8)">Próximo</button>
         <button class="btn btn-secondary" onclick="voltarTela(6)">Voltar</button>
       </div>
     </section>
 
+    <!-- Tela 8 -->
     <section id="tela8" class="tela">
       <h2>Resumo do Pedido</h2>
       <div id="resumo"></div>
       <p>Escaneie o QR Code para pagar:</p>
       <img src="qrcode.png" alt="QR Code de pagamento" width="200">
-      <button class="btn btn-primary" onclick="enviarWhatsApp()">Enviar pedido no WhatsApp</button>
-     <div class="buttons">
+      <button class="btn btn-primary" onclick="enviarWhatsApp()">Enviar no WhatsApp</button>
+
+      <div class="buttons">
         <button class="btn btn-secondary" onclick="voltarTela(7)">Voltar</button>
       </div>
     </section>
-  </div>
+  </main>
+
   <script src="script.js"></script>
 </body>
 </html>
