--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
   <!-- Barra de progresso -->
-  <div class="progress-bar">
+ <div class="progress-bar">
     <div id="progress"></div>
-  </div>
+    <span id="etapaAtual">Tela 1 de 8</span>
+</div>
 
   <main>
     <!-- Tela 1 -->
