--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main>
     <!-- Tela 1 -->
     <section id="tela1" class="tela ativa">
-      <img src="assets/logo_horizontal.svg" alt="">
+      <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
       <h1>Seja bem-vindo</h1>
       <p>Clique em “Vamos começar“ e monte sua festa em minutos.</p>
       <div class="buttons">
@@ -26,6 +26,7 @@
 
     <!-- Tela 2 -->
     <section id="tela2" class="tela">
+      <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
       <h2>Digite seu nome</h2>
       <input type="text" id="nomeCliente" placeholder="Seu nome" class="input-padrao">
 
@@ -43,6 +44,7 @@
 
     <!-- Tela 3 -->
     <section id="tela3" class="tela">
+       <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
       <h2>Escolha o tema</h2>
       <input type="text" id="pesquisaTema" class="input-padrao" placeholder="Pesquisar tema..." onfocus="mostrarTemas()" oninput="filtrarTemas()">
       <div id="listaTemas" class="hidden"></div>
@@ -55,6 +57,7 @@
 
     <!-- Tela 4 -->
     <section id="tela4" class="tela">
+       <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
       <h2>Escolha o combo</h2>
       <label><input type="radio" name="combo" value="Essencial"> Essencial</label>
       <label><input type="radio" name="combo" value="Fantástico"> Fantástico</label>
@@ -69,6 +72,7 @@
 
     <!-- Tela 5 -->
     <section id="tela5" class="tela">
+       <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
       <h2>Dados do Homenageado</h2>
       <input type="text" id="nomeHomenageado" class="input-padrao" placeholder="Nome do homenageado">
       <input type="number" id="idadeHomenageado" class="input-padrao" placeholder="Idade (se aplicável)">
@@ -81,6 +85,7 @@
 
     <!-- Tela 6 -->
     <section id="tela6" class="tela">
+       <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
       <h2>Adicionais</h2>
       <label><input type="checkbox" value="Bolo"> Bolo</label>
       <label><input type="checkbox" value="Docinhos"> Docinhos</label>
@@ -95,6 +100,7 @@
 
     <!-- Tela 7 -->
     <section id="tela7" class="tela">
+       <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
       <h2>Escolha a data</h2>
       <input type="date" id="dataFesta" class="input-padrao">
 
@@ -106,6 +112,7 @@
 
     <!-- Tela 8 -->
     <section id="tela8" class="tela">
+       <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
       <h2>Resumo do Pedido</h2>
       <div id="resumo"></div>
       <p>Escaneie o QR Code para pagar:</p>
