--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
 
       <h2>Escolha o tipo de festa</h2>
       <label><input type="radio" name="tipoFesta" value="Aniversário"> Aniversário</label>
-      <label><input type="radio" name="tipoFesta" value="15 Anos"> 15 Anos</label>
+      <label><input type="radio" name="tipoFesta" value="XV Anos"> 15 Anos</label>
       <label><input type="radio" name="tipoFesta" value="Bodas"> Bodas</label>
       <label><input type="radio" name="tipoFesta" value="Mêsversário"> Mêsversário</label>
+      <label><input type="radio" name="tipoFesta" value="Chá de Bebê"> Chá de Bebê</label>
+      <label><input type="radio" name="tipoFesta" value="Chá de Panela"> Chá de Panela</label>
+      <label><input type="radio" name="tipoFesta" value="Noivado"> Noivado</label>
+      <label><input type="radio" name="tipoFesta" value="Chá Revelação"> Chá Revelação</label>
 
       <div class="buttons">
         <button class="btn btn-primary" onclick="proximaTela(3)">Próximo</button>
