--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <!-- Tela 2 -->
     <section id="tela2" class="tela">
       <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
-      <h2>Digite seu nome</h2>
+      <h2>Como você se chama?</h2>
       <input type="text" id="nomeCliente" placeholder="Seu nome" class="input-padrao">
 
-      <h2>Escolha o tipo de festa</h2>
+      <h2>O que vamos realizar?</h2>
       <label><input type="radio" name="tipoFesta" value="Aniversário"> Aniversário</label>
       <label><input type="radio" name="tipoFesta" value="XV Anos"> 15 Anos</label>
       <label><input type="radio" name="tipoFesta" value="Bodas"> Bodas</label>
