ajustes de titulos e buttons

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
     <section id="tela2" class="tela">
       <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
       <h2>Como você se chama?</h2>
+      <p>Digite o seu nome</p>
       <input type="text" id="nomeCliente" placeholder="Seu nome" class="input-padrao">
 
       <h2>O que vamos realizar?</h2>
+      <p>Selecione o tipo de festa:</p>
       <label><input type="radio" name="tipoFesta" value="Aniversário"> Aniversário</label>
       <label><input type="radio" name="tipoFesta" value="XV Anos"> 15 Anos</label>
       <label><input type="radio" name="tipoFesta" value="Bodas"> Bodas</label>
@@ -54,7 +56,8 @@
     <!-- Tela 3 -->
   <section id="tela3" class="tela">
   <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
-  <h2>Escolha o tema</h2>
+  <h2>Qual será o tema da festa?</h2>
+  <p>Veja os temas disponíveis:</p>
   
   <div class="select-busca">
     <input type="text" id="pesquisaTema" class="input-padrao" placeholder="Pesquisar tema..." onclick="mostrarTemas()" oninput="filtrarTemas()">
@@ -70,7 +73,8 @@
     <!-- Tela 4 -->
     <section id="tela4" class="tela">
        <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
-      <h2>Escolha o combo</h2>
+      <h2>Escolha o combo desejado!</h2>
+      <p>Selecione de acordo com a sua preferência</p>
       <label><input type="radio" name="combo" value="Essencial"> Essencial</label>
       <label><input type="radio" name="combo" value="Fantástico"> Fantástico</label>
       <label><input type="radio" name="combo" value="Inesquecível"> Inesquecível</label>
@@ -85,7 +89,8 @@
     <!-- Tela 5 -->
     <section id="tela5" class="tela">
        <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
-      <h2>Dados do Homenageado</h2>
+      <h2>Quem está comemorando?</h2>
+      <p>Dados do Homenageado</p>
       <input type="text" id="nomeHomenageado" class="input-padrao" placeholder="Nome do homenageado">
       <input type="number" id="idadeHomenageado" class="input-padrao" placeholder="Idade (se aplicável)">
 
@@ -113,7 +118,8 @@
     <!-- Tela 7 -->
     <section id="tela7" class="tela">
        <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
-      <h2>Escolha a data</h2>
+       <h2>Qual será o dia do evento?</h2>
+       <p>Escolha a data</p>
       <input type="date" id="dataFesta" class="input-padrao">
 
       <div class="buttons">
