--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section id="tela1" class="tela ativa">
       <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
       <h2>Seja bem-vindo</h2>
-      <p>Clique em “Vamos começar“ e monte sua festa em minutos.</p>
+      <p>Clique em <strong>“Vamos começar“</strong> e monte sua festa em minutos.</p>
       <div class="buttons">
         <button class="btn btn-primary" onclick="proximaTela(2)">Vamos começar</button>
         <button class="btn btn-secondary" onclick="window.location.href='tutorial.html'">Veja com funciona</button>
@@ -33,7 +33,7 @@
     <section id="tela2" class="tela">
       <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
       <h2>Como você se chama?</h2>
-      <p>Digite o seu nome</p>
+      <p>Digite o seu nome:</p>
       <input type="text" id="nomeCliente" placeholder="Seu nome" class="input-padrao">
 
       <h2>O que vamos realizar?</h2>
