--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
       <h2>O que vamos realizar?</h2>
       <p>Selecione o tipo de festa:</p>
+      <div class="grid-radios">
       <label><input type="radio" name="tipoFesta" value="Aniversário"> Aniversário</label>
       <label><input type="radio" name="tipoFesta" value="XV Anos"> 15 Anos</label>
       <label><input type="radio" name="tipoFesta" value="Bodas"> Bodas</label>
@@ -49,7 +50,7 @@
       <label><input type="radio" name="tipoFesta" value="Chá de Panela"> Chá de Panela</label>
       <label><input type="radio" name="tipoFesta" value="Noivado"> Noivado</label>
       <label><input type="radio" name="tipoFesta" value="Chá Revelação"> Chá Revelação</label>
-
+      </div>
       <div class="buttons">
         <button class="btn btn-primary" onclick="proximaTela(3)">Próximo</button>
         <button class="btn btn-secondary" onclick="voltarTela(1)">Voltar</button>
