--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div id="listaTemas" class="hidden"></div>
 
   <label>
-    <input type="checkbox" id="temaOutro" onchange="ativarTemaOutro()"> Outro
+    <input type="checkbox" id="temaOutro" onchange="ativarTemaOutro()"> Não achou o seu tema?
   </label>
   
   <input type="text" id="novoTema" class="input-padrao" placeholder="Digite seu tema" style="display:none;">
