--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
  <div class="progress-bar">
     <div id="progress"></div>
     <span id="etapaAtual">Tela 1 de 8</span>
-</div>
+  
+  </div>
+     <div id="notificacao" class="notificacao">
+      <img src="assets/c-warning@4x.png" alt="info" class="icone">
+  <span id="mensagemErro"></span>
+  </div>
+
 
   <main>
     <!-- Tela 1 -->
