tela temas finished

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <!-- Tela 1 -->
     <section id="tela1" class="tela ativa">
       <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
-      <h2>Seja bem-vindo</h2>
-      <p>Clique em <strong>“Vamos começar“</strong> e monte sua festa em minutos.</p>
+      <h2>Seja bem-vindo!</h2>
+      <p>Clique em <strong>“Vamos começar“</strong> e monte sua festa em menos de 10 minutos.</p>
       <div class="buttons_home">
         <button class="btn btn-primary" onclick="proximaTela(2)">Vamos começar</button>
         <button class="btn btn-secondary" onclick="window.location.href='tutorial.html'">Veja com funciona</button>
@@ -68,8 +68,8 @@
       </div>
     </section>
 
-    <!-- Tela 3 -->
-  <section id="tela3" class="tela">
+   <!-- Tela 3 -->
+<section id="tela3" class="tela">
   <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
   <h2>Qual será o tema da festa?</h2>
   <p>Veja os temas disponíveis:</p>
@@ -78,11 +78,14 @@
     <input type="text" id="pesquisaTema" class="input-padrao" placeholder="Pesquisar tema..." onclick="mostrarTemas()" oninput="filtrarTemas()">
     <div id="listaTemas" class="hidden"></div>
 
-  <label>
-    <input type="checkbox" class="label-temaOutro" id="temaOutro" onchange="ativarTemaOutro()"> Não achou o seu tema?
-  </label>
-  
-  <input type="text" id="novoTema" class="input-padrao" placeholder="Digite seu tema" style="display:none;">
+    <!-- Novo título e checkbox -->
+    <h2>Outro?</h2>
+    <label class="label-temaOutro">
+      <input type="checkbox" id="temaOutro" onchange="ativarTemaOutro()">
+      Não achou o seu tema?
+    </label>
+
+    <input type="text" id="novoTema" class="input-padrao" placeholder="Digite seu tema" style="display:none;">
   </div>
 
   <div class="buttons">
@@ -91,6 +94,7 @@
     <button class="btn btn-secondary" onclick="voltarTela(2)">Voltar</button>
   </div>
 </section>
+
 
     <!-- Tela 4 -->
     <section id="tela4" class="tela">
