--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button class="btn btn-primary" onclick="proximaTela(2)">Vamos começar</button>
         <button class="btn btn-secondary" onclick="window.location.href='tutorial.html'">Veja como funciona</button>
         <button class="btn btn-secondary" onclick="window.location.href='catalogo.html'">Acesse nosso catálogo</button>
-        <button class="btn btn-secondary" onclick="window.open('https://5521960147831', '_blank')">Fale com a gente!</button>
+        <button class="btn btn-secondary" onclick="window.open('https://wa.me/5521960147831', '_blank')">Fale com a gente!</button>
       </div>
     </section>
 
