--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 
    <div class="mesa-container">
   <div class="mesa-info">
-    <img src="assets/mesa-redonda.png" alt="Ícone de mesa" class="mesa-icon">
-    <span id="mesa-label">Adicionar mesa (+R$10)</span>
+  <!-- <img src="assets/mesa-redonda.png" alt="Ícone de mesa" class="mesa-icon"> -->
+  <span id="mesa-label">Adicionar mesa (+R$10)</span>
   </div>
 
   <div id="switch" onclick="toggleMesa()">
