pre-selected button

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
   <div class="mesa-info">
   <!-- <img src="assets/mesa-redonda.png" alt="Ícone de mesa" class="mesa-icon"> -->
   <span id="mesa-label">Adicionar mesa (+R$10)</span>
+   <span id="desc-mesa">Obs: Os valores do combo abaixo não inclui mesa! </span>
   </div>
 
   <div id="switch" onclick="toggleMesa()">
