--- a/index.html
+++ b/index.html
@@ -158,8 +158,20 @@
     </div>
   </div>
 </div>
-<!-- Botões de scroll --> <div class="scroll-buttons"> <button class="scroll-btn" id="scroll-left" onclick="scrollCards(-1)"> <img src="assets/left-arrow.svg" alt="Esquerda"> </button> <button class="scroll-btn" id="scroll-right" onclick="scrollCards(1)"> <img src="assets/right-arrow.svg" alt="Direita"> </button> </div>
-<div id="valorTotal">Total: R$ 0,00</div>
+<!-- Botões de scroll --> 
+ <div class="scroll-buttons"> 
+  <button class="scroll-btn" id="scroll-left" onclick="scrollCards(-1)"> 
+    <img src="assets/left-arrow.svg" alt="Esquerda"> </button> 
+    <button class="scroll-btn" id="scroll-right" onclick="scrollCards(1)"> 
+  <img src="assets/right-arrow.svg" alt="Direita"> </button> </div>
+
+ <h5 class="obs"> Obs: Para mudança de algum intem deve solicitar no WhatsApp depois de confirmar o pedido.</h5>
+
+<div class="containerValorTotal">
+  <div class="Total">Total:</div>
+  <div id="valorTotal">R$ 0,00</div>
+</div>
+ 
 
 
   <div class="buttons">
