--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
       <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
       <h2>O que vamos realizar?</h2>
       <p>Selecione o tipo de festa:</p>
-      <div class="grid-radios">
+      <div class="grid-radios-type">
         <label><input type="radio" name="tipoFesta" value="Aniversário"> Aniversário</label>
         <label><input type="radio" name="tipoFesta" value="XV Anos"> XV Anos</label>
         <label><input type="radio" name="tipoFesta" value="Bodas"> Bodas</label>
@@ -184,7 +184,7 @@
     <section id="tela5" class="tela">
       <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
       <h2>Quem está comemorando?</h2>
-      <p>Dados do homenageado</p>
+      <p>Dados do(s) homenageado(s)</p>
       <input type="text" id="nomeHomenageado" class="input-padrao" placeholder="Nome do homenageado">
       <input type="number" id="idadeHomenageado" class="input-padrao" placeholder="Idade (se aplicável)">
       <div class="buttons">
@@ -219,32 +219,45 @@
       </div>
     </section>
 
-    <!-- Tela 8 (Nova: Dados + contrato) -->
+    <!-- Tela 8: Dados -->
     <section id="tela8" class="tela">
       <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
       <h2>Seus dados</h2>
-      <p>Insira suas informações e baixe o contrato:</p>
+      <p>Insira suas informações para contato:</p>
       <input type="text" id="nomeCliente" class="input-padrao" placeholder="Seu nome completo">
-      <input type="tel" id="telefoneCliente" class="input-padrao" placeholder="Telefone (WhatsApp)">
-        <a href="assets/contrato.pdf" download class="btn btn-primary">Baixar Contrato</a>      
-        <div class="buttons">
-        <button class="btn btn-primary" onclick="proximaTela(9)">Próximo</button>
+      <input type="tel" id="telefoneCliente" class="input-padrao" placeholder="Telefone (WhatsApp)">      
+     
+      <h2>Forma de Pagamento</h2>
+      <p>Escolha como deseja pagar:</p>
+      <div class="grid-radios-pay">
+        <label><input type="radio" name="formaPagamento" value="Pix"> Pix</label>
+          <label><input type="radio" name="formaPagamento" value="Dinheiro"> Dinheiro</label>
+        <label><input type="radio" name="formaPagamento" value="Cartão de Crédito"> Cartão de Crédito/Débito</label>
+      
+      </div>
+
+
+      <div class="buttons">
+        <button class="btn btn-primary" onclick="proximaTela(9);gerarResumo();">Próximo</button>
         <button class="btn btn-secondary" onclick="voltarTela(7)">Voltar</button>
       </div>
     </section>
 
-    <!-- Tela 9 (Resumo) -->
-    <section id="tela9" class="tela">
-      <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
-      <h2>Resumo do Pedido</h2>
-      <div id="resumo"></div>
-      <p>Escaneie o QR Code para pagar:</p>
-      <img src="qrcode.png" alt="QR Code de pagamento" width="200">
-      <div class="buttons">
-        <button class="btn btn-primary" onclick="enviarWhatsApp()">Enviar no WhatsApp</button>
-        <button class="btn btn-secondary" onclick="voltarTela(8)">Voltar</button>
-      </div>
-    </section>
+   
+   <!-- Tela 9 (Resumo) -->
+<section id="tela9" class="tela">
+  <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
+  <h2>Resumo do Pedido</h2>
+  <div id="resumo"></div>
+
+  <!-- Área dinâmica do pagamento -->
+  <div id="pagamentoResumo"></div>
+
+  <div class="buttons">
+    <button class="btn btn-primary" onclick="enviarWhatsApp()">Confirmar Pedido</button>
+    <button class="btn btn-secondary" onclick="voltarTela(8)">Voltar</button>
+  </div>
+</section>
   </main>
 
   <script src="script.js"></script>
