--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <main>
   <!-- Tela 1: Início -->
   <section id="tela1" class="tela ativa">
-    <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
+    <img src="assets/Encantiva_Logotipo.png" alt="Logo Encantiva">
     <h2>Seja bem-vindo!</h2>
     <p>Clique em <strong>“Vamos começar“</strong> e monte sua festa em menos de 10 minutos.</p>
     <div class="buttons_home">
@@ -43,7 +43,7 @@
 
   <!-- Tela 2: Ocasião -->
   <section id="tela2" class="tela">
-    <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
+    <img src="assets/Encantiva_Logotipo.png" alt="Logo Encantiva">
     <h2>O que vamos realizar?</h2>
     <p>Selecione o tipo de festa:</p>
     <div class="grid-radios-type">
@@ -64,7 +64,7 @@
 
   <!-- Tela 3: Tema -->
   <section id="tela3" class="tela">
-    <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
+    <img src="assets/Encantiva_Logotipo.png" alt="Logo Encantiva">
     <h2>Qual será o tema da festa?</h2>
     <p>Veja os temas disponíveis:</p>
     
@@ -92,7 +92,7 @@
 
   <!-- Tela 4: Homenageado -->
   <section id="tela4" class="tela">
-    <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
+    <img src="assets/Encantiva_Logotipo.png" alt="Logo Encantiva">
     <h2>Quem está comemorando?</h2>
     <p>Dados do(s) homenageado(s)</p>
     <input type="text" id="nomeHomenageado" class="input-padrao" placeholder="Nome do homenageado">
@@ -108,7 +108,7 @@
 
   <!-- Tela 5: Data -->
   <section id="tela5" class="tela">
-    <img src="assets/logo_horizontal.svg" alt="Logo Encantiva"> 
+    <img src="assets/Encantiva_Logotipo.png" alt="Logo Encantiva"> 
     <h2>Qual será o dia do evento?</h2> 
     <p>Escolha a data</p> 
     <input type="text" id="dataFesta" placeholder="Selecione a data">
@@ -124,7 +124,7 @@
 
   <!-- Tela 6: Tamanho -->
   <section id="tela6" class="tela">
-    <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
+    <img src="assets/Encantiva_Logotipo.png" alt="Logo Encantiva">
     <h2>Escolha o tamanho da festa</h2>
     <div class="cards-tamanhos">
       <div class="card-tamanho" id="festa-mesa" onclick="selecionarTamanho(0)">
@@ -149,7 +149,7 @@
 
   <!-- Tela 7: Combo -->
   <section id="tela7" class="tela">
-    <img src="assets/logo_horizontal.svg" alt="Logo Encantiva"> 
+    <img src="assets/Encantiva_Logotipo.png" alt="Logo Encantiva"> 
     <h2>Escolha seu combo</h2> 
     <p>Selecione de acordo com a sua preferência:</p> 
     <div class="mesa-container"> 
@@ -256,7 +256,7 @@
 
   <!-- Tela 8: Adicionais -->
  <section id="tela8" class="tela"> 
-  <img src="assets/logo_horizontal.svg" alt="Logo Encantiva"> 
+  <img src="assets/Encantiva_Logotipo.png" alt="Logo Encantiva"> 
   <h2>Adicionais</h2> 
   <p>Selecione os adicionais desejados:</p> 
       <div class="adicionais-button"> 
@@ -288,7 +288,7 @@
 
   <!-- Tela 9: Dados -->
   <section id="tela9" class="tela">
-      <img src="assets/logo_horizontal.svg" alt="Logo Encantiva"> 
+      <img src="assets/Encantiva_Logotipo.png" alt="Logo Encantiva"> 
       <h2>Seus dados</h2> 
       <p>Insira suas informações para contato:</p> 
     
@@ -316,7 +316,7 @@
 
   <!-- Tela 10: Resumo -->
   <section id="tela10" class="tela">
-    <img src="assets/logo_horizontal.svg" alt="Logo Encantiva">
+    <img src="assets/Encantiva_Logotipo.png" alt="Logo Encantiva">
     <h2>Resumo do Pedido</h2>
     <div id="resumo"></div>
   <!-- Área dinâmica do pagamento -->
