--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
   <span id="mensagemErro"></span>
 </div>
 
+<div class="blackfriday-bar">
+  <div class="blackfriday-track">
+    <span>BLACK FRIDAY • DESCONTOS NO SITE • ATÉ 50% OFF • </span>
+    <span>BLACK FRIDAY • DESCONTOS NO SITE • ATÉ 50% OFF • </span>
+    <span>BLACK FRIDAY • DESCONTOS NO SITE • ATÉ 50% OFF • </span>
+  </div>
+</div>
+
+
 <main>
   <!-- Tela 1: Início -->
   <section id="tela1" class="tela ativa">
